# chinese_chess

./: Cargo.toml
chess-ai/: Cargo.toml
chess-ai/examples/: llm_test.rs  test_analysis.rs
chess-ai/src/: evaluate.rs  lib.rs  search.rs  transposition.rs  zobrist.rs
chess-ai/src/llm/: analysis.rs  client.rs  engine.rs  mod.rs  parser.rs  prompt.rs
chess-client/: Cargo.toml
chess-client/src/: icons.rs  lib.rs  main.rs  settings.rs  storage.rs  theme.rs
chess-client/src/board/: mod.rs  pieces.rs  render.rs
chess-client/src/game/: ai.rs  input.rs  mod.rs  state.rs
chess-client/src/network/: connection.rs  mod.rs
chess-client/src/ui/: analysis_ui.rs  game_ui.rs  lobby_ui.rs  menu.rs  mod.rs  saved_games_ui.rs  settings_ui.rs
chess-client/src/ui/board_editor/: board_render.rs  mod.rs  palette.rs  state.rs  ui.rs  validation.rs
chess-server/: Cargo.toml
chess-server/src/: game.rs  lib.rs  main.rs  player.rs  room.rs  server.rs  storage.rs
docs/: AI_LOCALIZATION_PROPOSAL.md  repetition-detection-proposal.md
protocol/: Cargo.toml
protocol/src/: board.rs  constants.rs  error.rs  fen.rs  lib.rs  message.rs  moves.rs  notation.rs  piece.rs  record.rs  transport.rs
