[package]
name = "chess-ai"
version.workspace = true
edition.workspace = true

[dependencies]
protocol = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
