[package]
name = "chess-client"
version.workspace = true
edition.workspace = true

[dependencies]
protocol = { workspace = true }
chess-ai = { path = "../chess-ai" }
bevy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
lazy_static = "1.4"
dirs = "5.0"
